webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  type: ClusterIP
  selector:
    matchLabels:
      app: webapp
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
