webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webapp
  namespace: webapp
spec:
  ingressClassName: nginx
  rules:
    - host: webapp.homelab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
             service:
               name: webapp
               port: 
                 number: 80
